--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <title>Javferry</title>
   <base href="/">
   
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   
   <meta name="description" content="Javferry.com delivers excellent Jav Porn videos with few ads.">
 
