--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   
   <meta name="description" content="Javferry.com delivers excellent Jav Porn videos with few ads.">
 
-  <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
